Cycles motion blur particle object display issue #45936

Closed
opened 2015-08-28 12:33:09 +02:00 by Michael P. · 9 comments

System Information
System: Windows 7 64bit
RAM: 4096 MB
renderer: 'GeForce GTX 760/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 353.30'

Blender Version
Broken: 2.75a (official)
Worked: (optional)

Short description of error
Unexpected motion blur display of a particle object.

Exact steps for others to reproduce the error
Please open the attached blender file and render a frame. The expected motion blur should be in the
direction of the motion (from bottom to top), instead it's radial. Somehow the initial rotation is kept.

2015-08-28-cycles-motion-blur-display-issue.jpg
2015-08-28-cycles-motion-blur-display-issue-example.jpg

2015-08-28-cycles-motion-blur-display-issue.blend

**System Information** System: Windows 7 64bit RAM: 4096 MB renderer: 'GeForce GTX 760/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 353.30' **Blender Version** Broken: 2.75a (official) Worked: (optional) **Short description of error** Unexpected motion blur display of a particle object. **Exact steps for others to reproduce the error** Please open the attached blender file and render a frame. The expected motion blur should be in the direction of the motion (from bottom to top), instead it's radial. Somehow the initial rotation is kept. ![2015-08-28-cycles-motion-blur-display-issue.jpg](https://archive.blender.org/developer/F228729/2015-08-28-cycles-motion-blur-display-issue.jpg) ![2015-08-28-cycles-motion-blur-display-issue-example.jpg](https://archive.blender.org/developer/F228734/2015-08-28-cycles-motion-blur-display-issue-example.jpg) [2015-08-28-cycles-motion-blur-display-issue.blend](https://archive.blender.org/developer/F228731/2015-08-28-cycles-motion-blur-display-issue.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Well, vectors indeed do not look good at all, @Sergey?

Well, vectors indeed do not look good at all, @Sergey?

Yes something is definitely not right, but the issue is not in the Cycles side. It's particle system for some reason does crazy stuff with rotation for subframes. Not sure yet what's going on here, baking psys doesn't help either.

Yes something is definitely not right, but the issue is not in the Cycles side. It's particle system for some reason does crazy stuff with rotation for subframes. Not sure yet what's going on here, baking psys doesn't help either.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2015-08-28 15:31:44 +02:00

After more investigation it appears that physics in particles is not really robust enough for subframe interpolation needed for motion blur.

Particles is one of the most problematic areas in Blender currently, which needs much serious reconsiderations. Moving the report to TODO now http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Particles

So thanks for the report, but archiving it now.

After more investigation it appears that physics in particles is not really robust enough for subframe interpolation needed for motion blur. Particles is one of the most problematic areas in Blender currently, which needs much serious reconsiderations. Moving the report to TODO now http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Particles So thanks for the report, but archiving it now.

This issue was referenced by c1fd97f15d

This issue was referenced by c1fd97f15d7eb1862adf9de22cf9a6d363518573

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45936
No description provided.